test/types/records/bad-change-type/range-init2.good
range-init2.chpl:1: In function 'test':
range-init2.chpl:6: error: cannot initialize a non-stridable range from a stridable range
